--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,21 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  background-color: #e23636;
+  color: white;
+  font-family: Marvel;
 }
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.title{
+  font-family: sans-serif;
+  display: flex;
+  justify-content: center;
+  font-weight: bolder;
+  font-size: 35px;
+  -webkit-text-stroke: 1px black;
+}
+.pagination{
+  display: flex;
+  justify-content: center;
+}
+.section{
+  padding-right: 5px;
+  cursor: pointer;
 }
